src/test/testData/inspections/type-inspection/ResolveTypeType.toit

import .i as i
class A:
class B:

/** Adds the $name to a copy of this logger. */
a v / i.T -> B:
  return (B)

f:
 a <error descr="Cannot assign expression of type A to parameter of type T">(A)
</error>